; ModuleID = '/home/carl/AnghaBench/skynet/lualib-src/extr_lua-mongo.c_reserve_length.c'
source_filename = "/home/carl/AnghaBench/skynet/lualib-src/extr_lua-mongo.c_reserve_length.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.buffer = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.buffer*)* @reserve_length to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @reserve_length(%struct.buffer* %0) #0 {
  %2 = alloca %struct.buffer*, align 8
  %3 = alloca i32, align 4
  store %struct.buffer* %0, %struct.buffer** %2, align 8
  %4 = load %struct.buffer*, %struct.buffer** %2, align 8
  %5 = getelementptr inbounds %struct.buffer, %struct.buffer* %4, i32 0, i32 0
  %6 = load i32, i32* %5, align 4
  store i32 %6, i32* %3, align 4
  %7 = load %struct.buffer*, %struct.buffer** %2, align 8
  %8 = call i32 @buffer_reserve(%struct.buffer* %7, i32 4)
  %9 = load %struct.buffer*, %struct.buffer** %2, align 8
  %10 = getelementptr inbounds %struct.buffer, %struct.buffer* %9, i32 0, i32 0
  %11 = load i32, i32* %10, align 4
  %12 = add nsw i32 %11, 4
  store i32 %12, i32* %10, align 4
  %13 = load i32, i32* %3, align 4
  ret i32 %13
}

declare dso_local i32 @buffer_reserve(%struct.buffer*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
